cabal-version: 2.4
name: asn1-ber-syntax
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
-- copyright:
-- category:
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules: Asn.Ber
  build-depends:
    , base >=4.13 && <5
    , byteslice >=0.2.2 && <0.3
    , bytesmith >=0.3 && <0.4
    , primitive >=0.7 && <0.8
    , bytestring >=0.10
    , text-short >=0.1.3
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , base
    , byteslice
    , asn1-ber-syntax
  ghc-options: -Wall -O2
  default-language: Haskell2010

test-suite asn1-ber-syntax-golden
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Golden.hs
  build-depends:
    , base
    , byteslice
    , tasty-golden
    , base16
    , bytestring
    , filepath
    , tasty
    , asn1-ber-syntax
    , pretty-simple
  ghc-options: -Wall -O2
  default-language: Haskell2010
