cabal-version: 2.4
name: asn1-ber-syntax
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
-- copyright:
-- category:
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
      Asn.Ber
    , Asn.Ber.Encode
    , Asn.Resolve
    , Asn.Resolve.Category
  build-depends:
    , array-chunks >=0.1
    , base >=4.13 && <5
    , byteslice >=0.2.2 && <0.3
    , bytesmith >=0.3 && <0.4
    , bytestring >=0.10
    , primitive >=0.7.1 && <0.8
    , bytebuild >=0.3.7 && <0.4
    , text-short >=0.1.3
    , vector >=0.12
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , asn1-ber-syntax
    , base
    , byteslice
  ghc-options: -Wall -O2
  default-language: Haskell2010

test-suite asn1-ber-syntax-golden
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Golden.hs
  other-modules:
    Message
    Message.Category
  build-depends:
    , asn1-ber-syntax
    , base
    , base16
    , byteslice
    , bytestring
    , filepath
    , pretty-simple
    , primitive
    , tasty
    , tasty-golden
  ghc-options: -Wall -O2
  default-language: Haskell2010

test-suite test-properties
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Properties.hs
  build-depends:
    , asn1-ber-syntax
    , base
    , byteslice
    , primitive
    , QuickCheck
    , tasty
    , tasty-quickcheck
    , text-short
  ghc-options: -Wall -O2
  default-language: Haskell2010
